--- a/app/src/main/res/layout/feeling_intensity.xml
+++ b/app/src/main/res/layout/feeling_intensity.xml
@@ -7,28 +7,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/how_feel_text"
+        android:text="@string/how_intensity_text"
         android:textSize="30sp"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.199"
-        tools:text="Kuidas sa ennast tunned?" />
+        app:layout_constraintVertical_bias="0.196"
+        tools:text="Kui intensiivne on see tunne?" />
 
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="336dp"
         android:layout_height="64dp"
         android:layout_marginTop="68dp"
-        android:progress="50"
+        android:progress="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
@@ -38,7 +37,7 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/FeelingValue"
+        android:id="@+id/IntensityValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/FeelingValueNeutral"
@@ -53,15 +52,14 @@
         android:id="@+id/SeekBarProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="50"
+        android:text="0"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/FeelingValue"
+        app:layout_constraintTop_toBottomOf="@+id/IntensityValue"
         app:layout_constraintVertical_bias="0.941" />
-
     <Button
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
