--- a/app/src/main/res/layout/feeling_positivity.xml
+++ b/app/src/main/res/layout/feeling_positivity.xml
@@ -20,8 +20,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.199"
-        tools:text="Kuidas sa ennast tunned?" />
+        app:layout_constraintVertical_bias="0.199"/>
 
     <SeekBar
         android:id="@+id/seekBar"
@@ -67,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:text="Edasi"
+        android:text="@string/NextButton"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
