--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#DD5656</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorPrimaryDark">#A34040</color>
+    <color name="colorAccent">#F49C9C</color>
 </resources>
