--- a/app/src/main/res/layout/feeling_reacted.xml
+++ b/app/src/main/res/layout/feeling_reacted.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/what_triggered"
+        android:text="@string/how_reacted"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30sp"
