--- a/app/src/main/res/layout/feeling_understand_or_better.xml
+++ b/app/src/main/res/layout/feeling_understand_or_better.xml
@@ -6,22 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/main_background">
 
-
-    <TextView
-        android:id="@+id/dateTv"
-        android:layout_width="281dp"
-        android:layout_height="38dp"
-        android:gravity="center_horizontal"
-        android:text=""
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:textColor="#f0f0f0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.268" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -42,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:text="Lisa tunne"
+        android:text="Sulge"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,11 +36,11 @@
         app:layout_constraintVertical_bias="0.951" />
 
     <Button
-        android:id="@+id/buttonToday"
+        android:id="@+id/understandButton"
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:background="?attr/colorAccent"
-        android:text="Täna"
+        android:text="Tahan tundest aru saada"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,17 +50,17 @@
         app:layout_constraintVertical_bias="0.42" />
 
     <Button
-        android:id="@+id/pickDateBtn"
+        android:id="@+id/feelBetterButton"
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:background="?attr/colorAccent"
-        android:text="Muul ajal"
+        android:text="Tahan end paremini tunda"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonToday"
+        app:layout_constraintTop_toBottomOf="@+id/understandButton"
         app:layout_constraintVertical_bias="0.169" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
