--- a/app/src/main/res/layout/feeling_understand_or_better.xml
+++ b/app/src/main/res/layout/feeling_understand_or_better.xml
@@ -25,9 +25,8 @@
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/colorPrimaryDark"
         android:text="Sulge"
-        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -39,23 +38,21 @@
         android:id="@+id/understandButton"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorAccent"
+        android:background="?attr/colorPrimaryDark"
         android:text="Tahan tundest aru saada"
-        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.539"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.42" />
+        app:layout_constraintVertical_bias="0.424" />
 
     <Button
         android:id="@+id/feelBetterButton"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorAccent"
+        android:background="?attr/colorPrimaryDark"
         android:text="Tahan end paremini tunda"
-        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
