--- a/app/src/main/res/layout/feeling_when.xml
+++ b/app/src/main/res/layout/feeling_when.xml
@@ -41,9 +41,9 @@
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/colorPrimaryDark"
         android:text="Lisa tunne"
-        android:textColor="#ffffff"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -55,9 +55,8 @@
         android:id="@+id/buttonToday"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorAccent"
+        android:background="?attr/colorPrimaryDark"
         android:text="Täna"
-        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.539"
@@ -69,9 +68,8 @@
         android:id="@+id/pickDateBtn"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorAccent"
+        android:background="?attr/colorPrimaryDark"
         android:text="Muul ajal"
-        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
