--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#DD5656</color>
-    <color name="colorPrimaryDark">#A34040</color>
-    <color name="colorAccent">#F49C9C</color>
+<color name="colorPrimary">#E3E3E3</color>
+<color name="colorPrimaryDark">#E3E3E3</color>
+<color name="colorAccent">#F49C9C</color>
+<color name="textColor">#FFFFFF</color>
 </resources>
