--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
 <color name="colorPrimary">#E3E3E3</color>
 <color name="colorPrimaryDark">#E3E3E3</color>
-<color name="colorAccent">#F49C9C</color>
+<color name="colorAccent">#9EEAA1</color>
 <color name="textColor">#FFFFFF</color>
 </resources>
