--- a/app/src/main/res/drawable/ic_emotionwheel.xml
+++ b/app/src/main/res/drawable/ic_emotionwheel.xml
@@ -1,34 +1,41 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
+    android:width="330dp"
+    android:height="330dp"
     android:viewportWidth="200"
     android:viewportHeight="200">
-  <path
-      android:pathData="M7.32,100.013a92.673,92.667 0,1 0,185.345 0a92.673,92.667 0,1 0,-185.345 0z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="5"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFFFFF"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M101.028,7.833L101.028,192.516"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="5"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFFFFF"
-      android:strokeLineCap="butt"/>
-  <path
-      android:pathData="m22.577,51.467 l156.901,97.416"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="5"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFFFFF"
-      android:strokeLineCap="butt"/>
-  <path
-      android:pathData="M19.62,143.761 L182.436,56.589"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="5"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFFFFF"
-      android:strokeLineCap="butt"/>
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M7.32,100.013a92.673,92.667 0,1 0,185.345 0a92.673,92.667 0,1 0,-185.345 0z"
+        android:strokeWidth="5"
+        android:strokeColor="#FFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M101.028,7.833L101.028,192.516"
+        android:strokeWidth="5"
+        android:strokeColor="#FFFFFF"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="m22.577,51.467 l156.901,97.416"
+        android:strokeWidth="5"
+        android:strokeColor="#FFFFFF"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M19.62,143.761 L182.436,56.589"
+        android:strokeWidth="5"
+        android:strokeColor="#FFFFFF"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillColor="#AAEA81"
+        android:pathData="M18.248,137.78C12.486,125.009 10.065,113.837 10.071,100.037c0.006,-12.139 1.812,-21.901 6.108,-33.008 0.992,-2.565 5.186,-11.225 5.86,-12.1 0.336,-0.437 3.234,1.307 37.022,22.286 20.162,12.518 36.624,22.792 36.582,22.83 -0.053,0.05 -69.344,37.166 -75.477,40.43 -0.534,0.284 -0.644,0.13 -1.919,-2.696z"
+        android:strokeWidth="3.81789947"
+        android:strokeColor="#AAEA81"
+        android:strokeLineCap="square"
+        android:strokeLineJoin="miter" />
 </vector>
