--- a/app/src/main/res/layout/feeling_emotion.xml
+++ b/app/src/main/res/layout/feeling_emotion.xml
@@ -20,20 +20,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16" />
+        app:layout_constraintVertical_bias="0.102" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+    <com.example.feel.ui.addFeeling.RotaryKnobView
+        android:id="@+id/knob"
+        android:layout_width="@dimen/knob_width"
+        android:layout_height="@dimen/knob_height"
+        app:initialValue="0"
+        app:knobDrawable="@drawable/ic_emotionwheel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.598"
-        app:srcCompat="@drawable/ic_emotionwheel"
-        tools:ignore="VectorDrawableCompat" />
+        app:layout_constraintVertical_bias="0.673"
+        app:maxValue="360"
+        app:minValue="0" />
 
     <Button
         android:id="@+id/NextButton"
@@ -47,4 +49,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.951" />
+
+    <TextView
+        android:id="@+id/FeelingText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/knob"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
