--- a/app/src/main/res/layout/fragment_feeling_intensity.xml
+++ b/app/src/main/res/layout/fragment_feeling_intensity.xml
@@ -8,56 +8,45 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/FeelingIntensityText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/how_feel_text"
+        android:text="@string/how_intensity_text"
         android:textSize="30sp"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.199"/>
-
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="336dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="68dp"
-        android:progress="50"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.315"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.196"
+        tools:text="Kui intensiivne on see tunne?" />
 
     <TextView
-        android:id="@+id/FeelingValue"
+        android:id="@+id/IntensityValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/FeelingValueNeutral"
-        android:textSize="20sp"
+        android:layout_marginBottom="88dp"
+        android:text="@string/IntensityVeryWeak"
         android:textColor="#ffffff"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/FeelingIntensityText"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/SeekBarProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="50"
+        android:text="0"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/FeelingValue"
+        app:layout_constraintTop_toBottomOf="@+id/IntensityValue"
         app:layout_constraintVertical_bias="0.941" />
 
     <Button
@@ -71,5 +60,19 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.951" />
+        app:layout_constraintVertical_bias="0.95" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="336dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="248dp"
+        android:progress="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/FeelingIntensityText"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
