#15 Fixed feelings not being added to db

--- a/app/src/main/res/layout/fragment_feel_reaction.xml
+++ b/app/src/main/res/layout/fragment_feel_reaction.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.199" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/FeelingReactionText"
         android:layout_width="273dp"
         android:layout_height="258dp"
         android:autofillHints="Mis vallandas tunde?"
