--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -45,7 +45,8 @@
         tools:layout="@layout/fragment_feeling_positivity" >
         <action
             android:id="@+id/action_feelingPositivityFragment_to_feelingIntensityFragment"
-            app:destination="@id/feelingIntensityFragment" />
+            app:destination="@id/feelingIntensityFragment" >
+        </action>
         <action
             android:id="@+id/action_feelingPositivityFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
