--- a/app/src/main/res/layout/fragment_feel_or_understand_better.xml
+++ b/app/src/main/res/layout/fragment_feel_or_understand_better.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background">
@@ -11,10 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/when_you_felt"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30sp"
+        android:text="@string/HowYouWantToReact"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimaryDark"
-        android:text="Sulge"
+        android:text="@string/CloseButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -39,7 +38,7 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:background="?attr/colorPrimaryDark"
-        android:text="Tahan tundest aru saada"
+        android:text="@string/WantToUnderstand"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -52,7 +51,7 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:background="?attr/colorPrimaryDark"
-        android:text="Tahan end paremini tunda"
+        android:text="@string/WantToFelBetter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
