--- a/app/src/main/res/layout/fragment_feel_reaction.xml
+++ b/app/src/main/res/layout/fragment_feel_reaction.xml
@@ -18,21 +18,21 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.199" />
+        app:layout_constraintVertical_bias="0.094" />
 
     <EditText
         android:id="@+id/FeelingReactionText"
-        android:layout_width="273dp"
-        android:layout_height="258dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:autofillHints="Mis vallandas tunde?"
         android:ems="10"
         android:gravity="center"
+        android:hint="@string/WriteHere"
         android:inputType="textMultiLine"
         android:textColor="#f0f0f0"
-        android:hint="Kirjuta siia"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,4 +52,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.951" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="@string/HowReactExplanationText"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/FeelingReactionText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.189" />
 </androidx.constraintlayout.widget.ConstraintLayout>
