--- a/app/src/main/res/layout/fragment_feeling_trigger.xml
+++ b/app/src/main/res/layout/fragment_feeling_trigger.xml
@@ -25,14 +25,14 @@
 
     <EditText
         android:id="@+id/FeelingTriggerText"
-        android:layout_width="273dp"
-        android:layout_height="258dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:autofillHints="Mis vallandas tunde?"
         android:ems="10"
         android:gravity="center"
         android:inputType="textMultiLine"
         android:textColor="#f0f0f0"
-        android:hint="Kirjuta siia"
+        android:hint="@string/WriteHere"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
