--- a/app/src/main/res/layout/understand_feeling.xml
+++ b/app/src/main/res/layout/understand_feeling.xml
@@ -39,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/WhyIHaveThisFeeling"
+        android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
