#25 Added input validation and refactoring

--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:paddingBottom="20dp"
-    tools:context=".ExerciseFragment">
+    android:paddingBottom="20dp">
 
 
     <Button
@@ -17,8 +14,5 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text=""
-        android:textColor="#ffffff"
-        />
-
-
+        android:textColor="#ffffff" />
 </FrameLayout>
