--- a/app/src/main/res/layout/fragment_feeling_intensity.xml
+++ b/app/src/main/res/layout/fragment_feeling_intensity.xml
@@ -40,7 +40,7 @@
         android:id="@+id/SeekBarProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/InitialIntensitiValue"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         android:text="@string/NextButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
