--- a/app/src/main/res/layout/fragment_feeling_location.xml
+++ b/app/src/main/res/layout/fragment_feeling_location.xml
@@ -49,7 +49,7 @@
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         android:text="@string/NextButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
