--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <color name="colorPrimary">#E3E3E3</color>
-<color name="colorPrimaryDark">#E3E3E3</color>
+<color name="colorPrimaryDark">#B1B1B1</color>
 <color name="colorAccent">#9EEAA1</color>
 <color name="textColor">#FFFFFF</color>
 </resources>
