--- a/app/src/main/res/layout/fragment_detailed_view.xml
+++ b/app/src/main/res/layout/fragment_detailed_view.xml
@@ -11,7 +11,7 @@
         android:id="@+id/BackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
