--- a/app/src/main/res/layout/fragment_feel_when.xml
+++ b/app/src/main/res/layout/fragment_feel_when.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background">
@@ -41,8 +40,8 @@
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimaryDark"
-        android:text="Lisa tunne"
+        android:background="?attr/colorPrimary"
+        android:text="@string/AddFeeling"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +54,8 @@
         android:id="@+id/buttonToday"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorPrimaryDark"
-        android:text="Täna"
+        android:background="?attr/colorPrimary"
+        android:text="@string/Today"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.539"
@@ -68,8 +67,8 @@
         android:id="@+id/pickDateBtn"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorPrimaryDark"
-        android:text="Muul ajal"
+        android:background="?attr/colorPrimary"
+        android:text="@string/OtherTime"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
