--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
         android:layout_width="196dp"
         android:layout_height="82dp"
         android:layout_marginTop="184dp"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         android:text="@string/start_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
